--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,9 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: chris_muellner
 github_username: chrismuellner
 
+collections_dir: collections
+collections:
+  - educations
+
 # Build settings
 theme: jekyll-theme-cayman
