Add data for experience, project, skill sections

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,10 +3,11 @@
   to: 2020
   location: University of Applied Sciences Upper Austria - Campus Hagenberg
   description: |
-    Artificial Intelligence, Data Mining & Machine Learning, Generative Programming, Cloud Computing, Service-Engineering, Microservice-Architecture
+    Cloud Computing, Service-Engineering, Microservice-Architecture, Data Mining & Machine Learning, Formal Languages, Compiler Construction and Tooling, Data Warehousing, OLAP and Business Intelligence, Heuristic and Evolutionary Algorithms, Generative Programming, Security and Fault Tolerance in Software Systems, Artificial Intelligence, Model-driven Development
+
 - title: BSc in Software Engineering
   from: 2015
   to: 2018
   location: University of Applied Sciences Upper Austria - Campus Hagenberg
   description: |
-    Algorithms & Data Structures, Object-oriented programming, Database Management, Network Management
+    Component Based Development, Object-Oriented Programming, Advanced Algorithms and Data Structures, Software Development with Enterprise Technologies, Web Architectures and Frameworks, Software Design Patterns, Database Systems and Designs, Network Technology and Security, Operating Systems, Open Source in Software Development, Mathematics (Algebra, Statistics)
