--- a/_data/other.yml
+++ b/_data/other.yml
@@ -1,4 +1,16 @@
+- title: Advent of Code
+  year: 
+    - 2020
+  description: |
+    Tried out [adventofcode](https://adventofcode.com) where a new problem statement is released for each day in advent. 
+    Used rust to solve the different problems by parsing the input file and calculating the correct number.
+
 - title: Google Hashcode
-  year: 2018 + 2019
-- title: Catalyst Coding Contest
-  year: 2017
+  subtitle: Coding Competition
+  year:
+    - 2020
+    - 2019
+    - 2018
+  description: |
+    Solved a problem statement with different inputs of increasing difficulty in a group of 4 people.
+    Found and improved upon a heuristic to rate the various inputs and adapt it for the different input sets.
