--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "@toycode/markdown-it-class": "^1.2.4"
   }
 }
