--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@toycode/markdown-it-class": "^1.2.4",
     "autoprefixer": "^10.4.16",
     "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "@toycode/markdown-it-class": "^1.2.4"
+    "tailwindcss": "^3.4.0"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.10"
   }
 }
