Add cncf vienna talk recording

--- a/src/_data/talks.yaml
+++ b/src/_data/talks.yaml
@@ -7,3 +7,4 @@
   date: 2023-11-22
   event: CNCF Meetup (Vienna)
   link: https://community.cncf.io/events/details/cncf-vienna-presents-harnessing-operators-power-ampamp-how-we-made-backstage-improve-developer-efficiency/
+  recording: https://www.youtube.com/watch?v=MpoNi79l5kk
