--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "start": "npm-run-all --parallel css eleventy",
     "eleventy": "npx @11ty/eleventy --serve ",
     "debug": "DEBUG=Eleventy* npx @11ty/eleventy",
-    "css": "npx tailwindcss -i src/styles/tailwind.css -c src/styles/tailwind.config.js -o _site/style.css --watch",
-    "build": "ELEVENTY_PRODUCTION=true npx @11ty/eleventy && NODE_ENV=production npx tailwindcss -i src/styles/tailwind.css -c src/styles/tailwind.config.js -o _site/style.css --minify"
+    "css": "npx tailwindcss -i public/css/tailwind.css -c public/css/tailwind.config.js -o _site/tailwind.css --watch",
+    "build": "ELEVENTY_PRODUCTION=true npx @11ty/eleventy && NODE_ENV=production npx tailwindcss -i public/css/tailwind.css -c public/css/tailwind.config.js -o _site/tailwind.css --minify"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
@@ -13,9 +13,8 @@
     "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
-  },
-  "dependencies": {
-    "dayjs": "^1.11.10"
+    "tailwindcss": "^3.4.3",
+    "luxon": "^3.3.0",
+		"markdown-it-anchor": "^8.6.7"
   }
 }
