--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-img": "^3.1.1",
+		"@11ty/eleventy-navigation": "^0.3.5",
+		"@11ty/eleventy-plugin-bundle": "^1.0.4",
+		"@11ty/eleventy-plugin-rss": "^1.2.0",
+		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@toycode/markdown-it-class": "^1.2.4",
     "autoprefixer": "^10.4.19",
     "js-yaml": "^4.1.0",
