Add basic social media links

--- a/_data/config.yaml
+++ b/_data/config.yaml
@@ -1,5 +1,10 @@
 siteTitle: Home
 url: https://muellner.dev
-author: Christoph Muellner
-description: Overview of Christoph Muellner
+author: Christoph Müllner
+description: Homepage of Christoph Müllner
 keywords: software engineer
+socials:
+- name: Linkedin
+  url: https://www.linkedin.com/in/christoph-muellner-at/
+- name: Github
+  url: https://github.com/chrismuellner
