Update base template

--- a/_data/config.yaml
+++ b/_data/config.yaml
@@ -1,8 +1,6 @@
-siteTitle: Home
 url: https://muellner.dev
 author: Christoph Müllner
-description: Homepage of Christoph Müllner
-keywords: software engineer
+description: Homepage hosting personal information about myself
 socials:
 - name: Linkedin
   url: https://www.linkedin.com/in/christoph-muellner-at/
