--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ELEVENTY_PRODUCTION=true npx @11ty/eleventy && NODE_ENV=production npx tailwindcss -i public/css/tailwind.css -c public/css/tailwind.config.js -o _site/tailwind.css --minify"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy": "3.0.0-alpha.10",
     "@11ty/eleventy-img": "^4.0.0",
 		"@11ty/eleventy-navigation": "^0.3.5",
 		"@11ty/eleventy-plugin-bundle": "^2.0.0",
@@ -21,5 +21,6 @@
     "tailwindcss": "^3.4.3",
     "luxon": "^3.3.0",
 		"markdown-it-anchor": "^9.0.0"
-  }
+  },
+  "type": "module"
 }
