--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
   "devDependencies": {
     "@11ty/eleventy": "3.0.0-alpha.10",
     "@11ty/eleventy-img": "^4.0.0",
-		"@11ty/eleventy-navigation": "^0.3.5",
-		"@11ty/eleventy-plugin-bundle": "^2.0.0",
-		"@11ty/eleventy-plugin-rss": "^1.2.0",
-		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "@11ty/eleventy-navigation": "^0.3.5",
+    "@11ty/eleventy-plugin-bundle": "^2.0.0",
+    "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@toycode/markdown-it-class": "^1.2.4",
     "autoprefixer": "^10.4.19",
+    "eleventy-plugin-icons": "^4.5.0",
     "js-yaml": "^4.1.0",
+    "lucide-static": "^0.379.0",
+    "luxon": "^3.3.0",
+    "markdown-it-anchor": "^9.0.0",
     "npm-run-all2": "^6.0.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "luxon": "^3.3.0",
-		"markdown-it-anchor": "^9.0.0"
+    "simple-icons": "^11.15.0",
+    "tailwindcss": "^3.4.3"
   },
   "type": "module"
 }
