--- a/_data/talks.yaml
+++ b/_data/talks.yaml
@@ -2,9 +2,8 @@
   date: 2023-09-19
   event: CNCF Meetup (Linz)
   link: https://community.cncf.io/events/details/cncf-linz-presents-cloud-native-linz-sept-19-migration-to-cloud-native-amp-the-power-of-operators/
-  # description: 
 - title: "Scaling Observability: Harnessing the Power of Operators in Kubernetes"
   date: 2023-11-22
   event: CNCF Meetup (Vienna)
   link: https://community.cncf.io/events/details/cncf-vienna-presents-harnessing-operators-power-ampamp-how-we-made-backstage-improve-developer-efficiency/
-  recording: https://www.youtube.com/watch?v=MpoNi79l5kk
+  recording: https://youtu.be/MpoNi79l5kk?t=1270&si=Qa-ZInW5U-AWCUdf
