--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version-file: ".node-version" # reference: https://github.com/shadowspawn/node-version-usage
 
       - name: Cache npm
         uses: actions/cache@v4
@@ -32,7 +32,6 @@ jobs:
         with:
           path: ./.cache
           key: ${{ runner.os }}-eleventy-fetch-cache
-
 
       - run: npm install
       - run: npm run build
