--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 23
+      - name: Install dependencies
+        run: npm install
       - name: Install, build, and upload your site
         uses: withastro/action@v3
 
