--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "astro-icon": "^1.1.5",
     "daisyui": "^5.0.2",
     "tailwindcss": "^4.0.12"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.35.0"
   }
 }
