--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "tailwindcss": "^4.0.12"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.36.0"
+    "@rollup/rollup-linux-x64-gnu": "^4.36.0",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.14",
+    "lightningcss-linux-x64-gnu": "^1.29.3"
   }
 }
