--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 23
+      - name: Upgrade npm
+        run: npm install -g npm
       - name: Cache npm
         uses: actions/cache@v4
         with:
