--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "astro-icon": "^1.1.5",
     "daisyui": "^5.0.2",
     "tailwindcss": "^4.0.12"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.33.5"
   }
 }
