Automerge minor/patch dependency updates

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -8,5 +8,12 @@
     "dockerfile",
     "github-actions",
     "devcontainer"
+  ],
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch"],
+      "matchCurrentVersion": "!/^0/",
+      "automerge": true
+    }
   ]
 }
